--- a/D3_data_journalism/index.html
+++ b/D3_data_journalism/index.html
@@ -43,7 +43,7 @@
       </div>
     </div>
   </div>
-
+  <div class="chart"></div>
   <!-- Footer-->
   <div id="footer">
     <p>The Coding Boot Camp&copy;2016</p>
